--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Left" Margin="197,116,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Label x:Name="myLabel" Content="Label" HorizontalAlignment="Left" Height="137" Margin="390,116,0,0" VerticalAlignment="Top" Width="240"/>
+
     </Grid>
 </Window>
